--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,15 @@
 DISCORD_TOKEN=your_discord_bot_token
 DISCORD_GUILD_ID=your_guild_id
 
-# Supabase Configuration
-SUPABASE_URL=your_supabase_url
-SUPABASE_KEY=your_supabase_key
-SUPABASE_DB_PASSWORD=your_database_password
+# Database Configuration (Local Development)
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=discord_mods
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_database_password
+# For local development, use postgresql://postgres:your_database_password@localhost:5432/discord_mods
+SUPABASE_URL=postgresql://postgres:your_database_password@localhost:5432/discord_mods
+SUPABASE_KEY=your_database_password
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
@@ -37,3 +42,7 @@ RATE_LIMIT_PERIOD=60
 # Webhook Configuration
 WEBHOOK_HOST=0.0.0.0
 WEBHOOK_PORT=5000
+
+# Redis Configuration (Local Development)
+REDIS_HOST=localhost
+REDIS_PORT=6379
