--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ name = "pypi"
 # Database
 supabase = ">=2.0.0"
 psycopg2-binary = ">=2.9.0"
+asyncpg = ">=0.29.0"
 
 # Security
 cryptography = ">=41.0.0"
