--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ aioredis = ">=2.0.0"
 # Utilities
 python-dotenv = ">=1.0.0"
 pydantic = ">=2.0.0"
+pydantic-settings = ">=2.0.0"
 tenacity = ">=8.2.0"
 
 [dev-packages]
