--- a/.env.example
+++ b/.env.example
@@ -20,13 +20,18 @@ OPENAI_TEMPERATURE=0.7
 
 # GitHub Configuration
 GITHUB_TOKEN=your_github_token
+GITHUB_ORG=your_github_org
+GITHUB_WEBHOOK_SECRET=your_webhook_secret
+GITHUB_NOTIFICATIONS_CHANNEL=github-notifications
 
 # Security Configuration
 ENCRYPTION_KEY=your_32_byte_base64_encoded_key
+RATE_LIMIT_CALLS=100
+RATE_LIMIT_PERIOD=60
 
 # Monitoring Configuration
-LOG_LEVEL=INFO
 MONITORING_INTERVAL=60
+MONITORING_NOTIFICATIONS_CHANNEL=monitoring
 METRICS_RETENTION_DAYS=30
 
 # Alert Thresholds
@@ -34,10 +39,11 @@ ALERT_THRESHOLD_CPU=80.0
 ALERT_THRESHOLD_MEMORY=80.0
 ALERT_THRESHOLD_API_LATENCY=2000.0
 ALERT_THRESHOLD_ERROR_RATE=5.0
+ALERT_THRESHOLD_DISK=90.0
 
-# Rate Limiting
-RATE_LIMIT_CALLS=100
-RATE_LIMIT_PERIOD=60
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=bot.log
 
 # Webhook Configuration
 WEBHOOK_HOST=0.0.0.0
