--- a/.dockerignore
+++ b/.dockerignore
@@ -1,71 +1,88 @@
-# Version control
+# Git
 .git
 .gitignore
+.gitattributes
+
+# Docker
+.docker
+docker-compose*.yml
+Dockerfile
+.dockerignore
 
 # Python
-__pycache__/
+*.pyc
+*.pyo
+*.pyd
+__pycache__
+.Python
 *.py[cod]
 *$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 .env
 .venv
+env/
 venv/
 ENV/
+env.bak/
+venv.bak/
+.python-version
 
-# IDE
-.idea/
-.vscode/
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+static/
+
+# Development/IDE
+.idea
+.vscode
 *.swp
 *.swo
 *~
+.DS_Store
 
-# Testing
+# Test
 .coverage
-.coverage.*
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
 htmlcov/
 .tox/
-nosetests.xml
-coverage/
+.pytest_cache/
+.mypy_cache/
 
-# Logs and databases
-*.log
-*.sqlite
-*.sqlite3
-*.db
-logs/
+# Documentation
+docs/
+*.md
+LICENSE
 
-# Docker
-.docker/
-docker-compose.override.yml
-
-# Project specific
+# Node
 node_modules/
-.cache/
-*.local
-.supabase/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Data
-data/
-postgres_data/
-redis_data/
+# Temporary files
+*.bak
+*.tmp
+*.temp
+
+# Local development
+*.env
+*.env.*
+!.env.example
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build
+build/
+dist/
+*.egg-info/
+
+# Logs
+logs/
+*.log
+
+# System Files
+.DS_Store
+Thumbs.db
