--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ python-dotenv>=1.0.0
 requests>=2.31.0
 uvicorn>=0.22.0
 gunicorn>=20.1.0
+channels>=4.0.0
+channels-redis>=4.1.0
+pydantic>=2.4.2
+pydantic-settings>=2.0.3
 
 # AI and GitHub integration
 openai>=0.27.0
