--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,4 @@
 [pytest]
-asyncio_mode = auto
-addopts = --cov=. --cov-report=html --cov-report=xml --cov-fail-under=80
-testpaths = tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-asyncio_default_fixture_loop_scope = function
-
-[coverage:run]
-omit = 
-    main.py
-    tests/*
-    */site-packages/*
+DJANGO_SETTINGS_MODULE = config.settings
+python_files = tests.py test_*.py *_tests.py
+addopts = --reuse-db --nomigrations --cov=. --cov-report=term-missing
