--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = config.settings
+DJANGO_SETTINGS_MODULE = config.test_settings
 python_files = tests.py test_*.py *_tests.py
 addopts = --reuse-db --nomigrations --cov=. --cov-report=term-missing
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::django.utils.deprecation.RemovedInDjango50Warning
+    ignore::pytest.PytestDeprecationWarning
