--- a/requirements.txt
+++ b/requirements.txt
@@ -12,15 +12,12 @@ uvicorn>=0.22.0
 gunicorn>=20.1.0
 channels>=4.0.0
 channels-redis>=4.1.0
-pydantic>=2.4.2
-pydantic-settings>=2.0.3
 
 # AI and GitHub integration
 openai>=0.27.0
 PyGithub>=1.58.0
 
 # Database
-supabase>=1.0.3
 postgrest>=0.10.6
 
 # Testing
@@ -28,6 +25,9 @@ pytest>=7.3.1
 pytest-django>=4.5.2
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+pytest-mock>=3.10.0
+factory-boy>=3.2.1
+faker>=18.4.0
 
 # Development
 black>=23.3.0
