--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ uvicorn>=0.22.0
 gunicorn>=20.1.0
 channels>=4.0.0
 channels-redis>=4.1.0
+pydantic-settings>=2.0.0
 
 # AI and GitHub integration
 openai>=0.27.0
