--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,6 @@ services:
       - redis
     networks:
       - web_network
-      - internal_network
     restart: unless-stopped
 
   nginx:
@@ -41,7 +40,7 @@ services:
     volumes:
       - redis_data:/data
     networks:
-      - internal_network
+      - web_network
     restart: unless-stopped
 
   celery:
@@ -59,7 +58,7 @@ services:
     depends_on:
       - redis
     networks:
-      - internal_network
+      - web_network
     restart: unless-stopped
 
   celery-beat:
@@ -77,7 +76,7 @@ services:
     depends_on:
       - redis
     networks:
-      - internal_network
+      - web_network
     restart: unless-stopped
 
 volumes:
@@ -88,6 +87,3 @@ volumes:
 networks:
   web_network:
     driver: bridge
-  internal_network:
-    driver: bridge
-    internal: true
