--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,54 @@
-limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+# Rate limiting zones
+limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=api:10m rate=5r/s;
 
+# Upstream for Django
 upstream django {
     server web:8000;
+    keepalive 32;
 }
 
+# WebSocket support
 map $http_upgrade $connection_upgrade {
     default upgrade;
     '' close;
 }
 
+# Compression
+gzip on;
+gzip_vary on;
+gzip_proxied any;
+gzip_comp_level 6;
+gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+
 server {
     listen 80;
     server_name gideon.lytestudios.be;
 
-    # Logs
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline' 'unsafe-eval';" always;
 
-    client_max_body_size 100M;
+    # Logs with rate limiting
+    access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+    error_log /var/log/nginx/error.log warn;
+
+    # Upload size
+    client_max_body_size 10M;
+
+    # Health check endpoint
+    location /health/ {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 'OK';
+    }
 
     # Proxy settings
     location / {
-        limit_req zone=one burst=10 nodelay;
+        limit_req zone=one burst=20 nodelay;
         proxy_pass http://django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -32,22 +59,53 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
-        proxy_read_timeout 86400;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+
+        # Enable keepalive
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
+    }
+
+    # API endpoints with stricter rate limiting
+    location /api/ {
+        limit_req zone=api burst=10 nodelay;
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Static files
     location /static/ {
-        alias /app/static/;
+        alias /app/web/staticfiles/;
         expires 1y;
         access_log off;
-        add_header Cache-Control "public";
+        add_header Cache-Control "public, no-transform";
+
+        # Enable compression
+        gzip_static on;
     }
 
     # Media files
     location /media/ {
-        alias /app/media/;
-        expires 1y;
+        alias /app/web/media/;
+        expires 7d;
         access_log off;
-        add_header Cache-Control "public";
+        add_header Cache-Control "public, no-transform";
+        
+        # Limit media file types
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf)$ {
+            expires 1y;
+        }
+    }
+
+    # Deny access to hidden files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 }
