--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   web:
@@ -22,10 +21,11 @@ services:
           cpus: '0.5'
           memory: 512M
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: ["CMD", "python", "-c", "import socket; socket.socket().connect(('localhost', 8000))"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     restart: unless-stopped
 
   nginx:
@@ -40,7 +40,7 @@ services:
       - "443:443"
     depends_on:
       web:
-        condition: service_healthy
+        condition: service_started
     deploy:
       resources:
         limits:
@@ -78,7 +78,7 @@ services:
       - media_volume:/app/web/media
     depends_on:
       redis:
-        condition: service_healthy
+        condition: service_started
     deploy:
       resources:
         limits:
