--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,15 +3,17 @@ FROM nginx:1.25-alpine
 # Install required packages
 RUN apk add --no-cache curl
 
-# Remove default nginx config
-RUN rm /etc/nginx/conf.d/default.conf
+# Remove default nginx config and user directive
+RUN rm /etc/nginx/conf.d/default.conf && \
+    sed -i '/user  nginx;/d' /etc/nginx/nginx.conf
 
-# Create necessary directories
+# Create necessary directories with proper permissions
 RUN mkdir -p /var/log/nginx /app/web/staticfiles /app/web/media && \
-    chown -R nginx:nginx /var/log/nginx /app
+    chown -R nginx:nginx /var/log/nginx /app && \
+    chmod -R 755 /app/web/staticfiles /app/web/media
 
 # Copy custom nginx config
-COPY default.conf /etc/nginx/conf.d/
+COPY --chown=nginx:nginx default.conf /etc/nginx/conf.d/
 
 # Add healthcheck
 HEALTHCHECK --interval=30s --timeout=3s \
@@ -20,5 +22,10 @@ HEALTHCHECK --interval=30s --timeout=3s \
 # Expose ports
 EXPOSE 80 443
 
-# Use non-root user
+# Switch to non-root user
 USER nginx
+
+# Set permissions for nginx to write to /tmp
+RUN mkdir -p /tmp/nginx && \
+    chown -R nginx:nginx /tmp/nginx && \
+    chmod -R 755 /tmp/nginx
