--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -50,22 +50,25 @@ server {
     location / {
         limit_req zone=one burst=20 nodelay;
         proxy_pass http://django;
+        
+        # Standard headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # WebSocket support
+        # HTTP/1.1 and keepalive
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Connection "";
+
+        # Timeouts
         proxy_read_timeout 300;
         proxy_connect_timeout 300;
         proxy_send_timeout 300;
 
-        # Enable keepalive
-        proxy_set_header Connection "";
-        proxy_http_version 1.1;
+        # WebSocket support
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 
     # API endpoints with stricter rate limiting
