--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,10 @@
+# Temp paths
+client_body_temp_path /var/cache/nginx/client_temp;
+proxy_temp_path /var/cache/nginx/proxy_temp;
+fastcgi_temp_path /var/cache/nginx/fastcgi_temp;
+uwsgi_temp_path /var/cache/nginx/uwsgi_temp;
+scgi_temp_path /var/cache/nginx/scgi_temp;
+
 # Rate limiting zones
 limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
 limit_req_zone $binary_remote_addr zone=api:10m rate=5r/s;
@@ -38,6 +45,8 @@ server {
 
     # Upload size
     client_max_body_size 10M;
+    client_body_buffer_size 128k;
+    proxy_max_temp_file_size 0;
 
     # Health check endpoint
     location /health/ {
