--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     volumes:
       - static_volume:/app/web/staticfiles:ro
       - media_volume:/app/web/media:ro
-      - discord-mods-inc_certs:/certs:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     ports:
       - "80:80"
       - "443:443"
@@ -91,4 +91,3 @@ volumes:
   static_volume:
   media_volume:
   redis_data:
-  discord-mods-inc_certs:
