--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,6 +33,41 @@ server {
     listen [::]:80;
     server_name gideon.lytestudios.be;
 
+    # Certbot webroot challenge
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirect all other HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name gideon.lytestudios.be;
+
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/gideon.lytestudios.be/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/gideon.lytestudios.be/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/gideon.lytestudios.be/chain.pem;
+
+    # SSL optimization
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    # OCSP Stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
