--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pydantic-settings>=2.0.0
 # AI and GitHub integration
 openai>=0.27.0
 tenacity>=8.2.3
+tiktoken>=0.5.2
 PyGithub>=1.58.0
 
 # Database
